crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badPropertyType.usd
version https://git-lfs.github.com/spec/v1
oid sha256:80754a60bf1933318e3358c989d2907367e08bb7d35a2aa9b1e505d33da58a5d
size 2442
